# cytoself_varchamp

./: pyproject.toml
1_train_models/oasis/: 1_download_image.py  2_convert_tiff_zarr.py  3_filter_crop_images.py
1_train_models/varchamp_1percent/: 2_convert_tiff_zarr.py
